commit translated contents

--- a/api/qsharp/microsoft.quantum.arrays.constantarray.yml
+++ b/api/qsharp/microsoft.quantum.arrays.constantarray.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.arrays.constantarray
 name: ConstantArray
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 创建一个给定长度的数组，其中的所有元素都等于给定的值。
 examples: >-
-  下面的代码创建一个具有3个布尔值的数组，每`true`个数组等于：
+  下面的代码创建一个具有3个布尔值的数组，每个数组等于 `true` ：
 
 
   ```qsharp
@@ -28,14 +28,14 @@ input:
 output:
   content: "'T[]"
   types:
-  - summary: 一个新的长度`length`数组，使每个元素都`value`是。
+  - summary: 一个新的长度数组 `length` ，使每个元素都是 `value` 。
     isArray: true
     uid: "'T"
     isLocal: true
 metadata:
-  ms.openlocfilehash: e989c80b27c3ce0d90a564181c0bcae2f892ada0
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: df6f39577259d4e3fbfa5401cab6d25b06abe9c7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676536"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89352438"
