--- a/api/qsharp/microsoft.quantum.arrays.fold.yml
+++ b/api/qsharp/microsoft.quantum.arrays.fold.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.arrays.fold
 name: Fold
 type: function
-namespace: Microsoft.Quantum.Arrays
-summary: 通过数组`f` `array`循环访问函数，返回`f(f(f(initialState, array[0]), array[1]), ...)`。
+namespace: microsoft.quantum.arrays
+summary: 通过数组循环访问函数 `f` `array` ，返回 `f(f(f(initialState, array[0]), array[1]), ...)` 。
 examples: >-
   ```qsharp
 
@@ -45,18 +45,18 @@ input:
 output:
   content: "'State"
   types:
-  - summary: 遍历的所有元素后，文件夹返回的最终状态`array`。
+  - summary: 遍历的所有元素后，文件夹返回的最终状态 `array` 。
     uid: "'State"
     isLocal: true
 typeParameters:
 - uid: "'State"
-  summary: '`folder`函数操作的状态的类型，即接受作为其第一个参数，并返回。'
+  summary: 函数操作的状态的类型 `folder` ，即接受作为其第一个参数，并返回。
 - uid: "'T"
-  summary: '`array`元素的类型。'
+  summary: 元素的类型 `array` 。
 metadata:
-  ms.openlocfilehash: d02d20c049e8b8d21214028efcd6a647067bf71f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 584344137b498a9c5348cb1f0a0cb85aeec127bd
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676445"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89352302"
