--- a/api/qsharp/microsoft.quantum.arrays.indexrange.yml
+++ b/api/qsharp/microsoft.quantum.arrays.indexrange.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.arrays.indexrange
 name: IndexRange
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 给定一个数组，返回该数组的索引范围，该范围适用于在 for 循环中使用。
 examples: >-
-  以下`for`循环是等效的：
+  以下 `for` 循环是等效的：
 
 
   ```Q#
@@ -34,9 +34,9 @@ typeParameters:
 - uid: "'TElement"
   summary: 数组元素的类型。
 metadata:
-  ms.openlocfilehash: 6c3135e07c65ddf6b7c61a4b9f412f5156e48e73
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 88b827a5fb9b0dcdaceb6392b14cce98bdd281f5
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672791"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89352081"
