--- a/api/qsharp/microsoft.quantum.math.argcomplex.yml
+++ b/api/qsharp/microsoft.quantum.math.argcomplex.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.math.argcomplex
 name: ArgComplex
 type: function
-namespace: Microsoft.Quantum.Math
-summary: 返回类型`Complex`为的复数的相位。
+namespace: microsoft.quantum.math
+summary: 返回类型为的复数的相位 `Complex` 。
 syntax: 'function ArgComplex (input : Microsoft.Quantum.Math.Complex) : Double'
 input:
   content: '(input : Microsoft.Quantum.Math.Complex)'
@@ -14,13 +14,13 @@ input:
 output:
   content: Double
   types:
-  - summary: 阶段 $ \text{Arg} [c] = \text{ArcTan} （y，x） \in （-\pi，\pi] $。
+  - summary: 阶段 $ \text{Arg} [c] = \text{ArcTan} (y，x) \in (-\pi，\pi] $。
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 25ebc6a41fbffd8bae3d4d06b5db5b9d68a4da90
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 33581abc8d0ec53d3ee1a1b3877471ee1cdc8ecb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685812"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344465"
