--- a/api/qsharp/microsoft.quantum.random.transformedcontinuousdistribution.yml
+++ b/api/qsharp/microsoft.quantum.random.transformedcontinuousdistribution.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.random.transformedcontinuousdistribution
 name: TransformedContinuousDistribution
 type: function
-namespace: Microsoft.Quantum.Random
+namespace: microsoft.quantum.random
 summary: 给定连续分布时，将返回一个新的分布，该分布通过给定函数转换原始。
 examples: >-
   以下两个分布区完全相同：
@@ -42,9 +42,9 @@ output:
   - summary: 由提供的转换与关联的新分布 `distribution` `transform` 。
     uid: microsoft.quantum.random.continuousdistribution
 metadata:
-  ms.openlocfilehash: 033e852fa0c536d51a62b93c9cf71d03d2fcb959
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: 515cb4bd06fe5dd4d6c3c5dae9f7d51d616be5fb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863972"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89330644"
