--- a/api/qsharp/microsoft.quantum.research.chemistry.jwoptimizedgeneratorsystem.yml
+++ b/api/qsharp/microsoft.quantum.research.chemistry.jwoptimizedgeneratorsystem.yml
@@ -2,24 +2,24 @@
 uid: microsoft.quantum.research.chemistry.jwoptimizedgeneratorsystem
 name: JWOptimizedGeneratorSystem
 type: function
-namespace: Microsoft.Quantum.Research.Chemistry
-summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为用`GeneratorSystem`此文件中定义的`GeneratorIndex`约定表示的。
+namespace: microsoft.quantum.research.chemistry
+summary: 将描述的 Hamiltonian 转换 `JWOptimizedHTerms` 为用 `GeneratorSystem` `GeneratorIndex` 此文件中定义的约定表示的。
 syntax: 'function JWOptimizedGeneratorSystem (data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms) : Microsoft.Quantum.Simulation.GeneratorSystem'
 input:
   content: '(data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms)'
   types:
   - name: data
-    summary: '`JWOptimizedHTerms`格式的 Hamiltonian 说明。'
+    summary: 格式的 Hamiltonian 说明 `JWOptimizedHTerms` 。
     uid: microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms
 output:
   content: Microsoft.Quantum.Simulation.GeneratorSystem
   types:
-  - summary: Hamiltonian 的表示形式`GeneratorSystem`。
+  - summary: Hamiltonian 的表示形式 `GeneratorSystem` 。
     uid: microsoft.quantum.simulation.generatorsystem
 metadata:
-  ms.openlocfilehash: 54b172085c66a826a571c5eb2e6dc0a2bfa303a4
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 6234b4849bd8f2763df6f63d3b07a1482618f8be
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683095"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89330457"
