--- a/api/qsharp/microsoft.quantum.arrays.foreach.yml
+++ b/api/qsharp/microsoft.quantum.arrays.foreach.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.arrays.foreach
 name: ForEach
 type: operation
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 给定为数组元素定义的数组和操作，返回一个新数组，该数组由该操作下的原始数组的图像组成。
-remarks: "操作是为泛型类型定义的，也就是说，只要有一个数组`'T[]`和一个操作`action : 'T -> 'U` ，我们就可以映射数组的元素，并生成一个类型`'U[]`为的新数组。"
+remarks: "操作是为泛型类型定义的，也就是说，只要有一个数组 `'T[]` 和一个操作， `action : 'T -> 'U` 我们就可以映射数组的元素，并生成一个类型为的新数组 `'U[]` 。"
 syntax: "operation ForEach (action : ('T => 'U), array : 'T[]) : 'U[]"
 input:
   content: "(action : ('T => 'U), array : 'T[])"
   types:
   - name: action
-    summary: 从`'T`到`'U`的操作将应用于每个元素。
+    summary: 从 `'T` 到的操作将 `'U` 应用于每个元素。
     isOperation: true
     input:
       types:
@@ -21,26 +21,26 @@ input:
       - uid: "'U"
         isLocal: true
   - name: array
-    summary: 上`'T`的元素的数组。
+    summary: 上的元素的数组 `'T` 。
     isArray: true
     uid: "'T"
     isLocal: true
 output:
   content: "'U[]"
   types:
-  - summary: 由`action`操作`'U[]`映射的元素的数组。
+  - summary: "`'U[]`由操作映射的元素的数组 `action` 。"
     isArray: true
     uid: "'U"
     isLocal: true
 typeParameters:
 - uid: "'T"
-  summary: '`array`元素的类型。'
+  summary: 元素的类型 `array` 。
 - uid: "'U"
-  summary: '`action`操作的结果类型。'
+  summary: 操作的结果类型 `action` 。
 metadata:
-  ms.openlocfilehash: af4b6b469017e4cee581a9bdd96ef6171d9b1deb
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c630f23c57ccba1588e553641acf61312411f146
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681039"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89352268"
