--- a/api/qsharp/microsoft.quantum.arrays.mapped.yml
+++ b/api/qsharp/microsoft.quantum.arrays.mapped.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.arrays.mapped
 name: Mapped
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 给定数组和为数组元素定义的函数后，将返回一个新数组，该数组由函数下的原始数组的图像组成。
-remarks: "函数是为泛型类型定义的，也就是说，只要有一个数组`'T[]`和一个函数`mapper: 'T -> 'U` ，我们就可以映射数组的元素，并生成一个类型`'U[]`为的新数组。"
+remarks: "函数是为泛型类型定义的，也就是说，只要有一个数组 `'T[]` 和一个函数， `mapper: 'T -> 'U` 我们就可以映射数组的元素，并生成一个类型为的新数组 `'U[]` 。"
 syntax: "function Mapped (mapper : ('T -> 'U), array : 'T[]) : 'U[]"
 input:
   content: "(mapper : ('T -> 'U), array : 'T[])"
   types:
   - name: mapper
-    summary: 用于映射元素`'T`的`'U`的函数。
+    summary: 用于映射元素的的函数 `'T` `'U` 。
     isFunction: true
     input:
       types:
@@ -21,26 +21,26 @@ input:
       - uid: "'U"
         isLocal: true
   - name: array
-    summary: 上`'T`的元素的数组。
+    summary: 上的元素的数组 `'T` 。
     isArray: true
     uid: "'T"
     isLocal: true
 output:
   content: "'U[]"
   types:
-  - summary: 由`mapper`函数`'U[]`映射的元素的数组。
+  - summary: "`'U[]`由函数映射的元素的数组 `mapper` 。"
     isArray: true
     uid: "'U"
     isLocal: true
 typeParameters:
 - uid: "'T"
-  summary: '`array`元素的类型。'
+  summary: 元素的类型 `array` 。
 - uid: "'U"
-  summary: '`mapper`函数的结果类型。'
+  summary: 函数的结果类型 `mapper` 。
 metadata:
-  ms.openlocfilehash: 877899dad82374281090e189c727c2a662f12b7b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 8f2b2c741bf9052032e37b830d9d6871bccf724a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680953"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351962"
