--- a/api/qsharp/microsoft.quantum.arrays.most.yml
+++ b/api/qsharp/microsoft.quantum.arrays.most.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arrays.most
 name: Most
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 创建一个等于输入数组的数组，只不过最后一个数组元素被删除。
 syntax: "function Most (array : 'T[]) : 'T[]"
 input:
@@ -16,7 +16,7 @@ input:
 output:
   content: "'T[]"
   types:
-  - summary: 包含元素`array[0..Length(array) - 2]`的数组。
+  - summary: 包含元素的数组 `array[0..Length(array) - 2]` 。
     isArray: true
     uid: "'T"
     isLocal: true
@@ -24,9 +24,9 @@ typeParameters:
 - uid: "'T"
   summary: 数组元素的类型。
 metadata:
-  ms.openlocfilehash: 352e0eb9931b47e14f549828aa2a1c34af8ad901
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e3580525b0f5851138110c9be2eb09e8deb16379
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680912"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351894"
