--- a/api/qsharp/microsoft.quantum.diagnostics.dumpregister.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.dumpregister.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.diagnostics.dumpregister
 name: DumpRegister
 type: function
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 将当前目标计算机的状态转储为与给定的 qubits 相关联。
 remarks: >-
   此方法允许你将与给定 qubits 的状态关联的信息转储到一个文件或其他位置。
 
-  生成的实际信息和的语义`location`特定于每个目标计算机。 但是，将空元组作为位置（`()`）提供通常意味着将输出生成到控制台。
+  生成的实际信息和的语义 `location` 特定于每个目标计算机。 但是，将空元组作为位置 (提供 `()`) 通常表示生成到控制台的输出。
 
 
-  对于作为量程开发工具包的一部分分发的本地完整状态模拟器，此方法需要一个包含文件路径的字符串，该文件将给定 qubits 的状态（即相应子系统的波形函数）作为复数的一维数组写入，其中每个元素表示测量相应状态的概率的 amplitudes。
+  对于作为量程开发工具包的一部分分发的本地完整状态模拟器，此方法需要一个字符串路径与文件的路径，在该文件中，它将写入给定)  (qubits 的状态，其中，每个元素都表示测量相应状态的概率的 amplitudes，其中每个元素表示测量相应状态的概率的。
 
   如果给定的 qubits 与一些其他 qubit 放大，且无法分离其状态，则只会报告 qubits 为放大。
 syntax: "function DumpRegister (location : 'T, qubits : Qubit[]) : Unit"
@@ -33,9 +33,9 @@ output:
     isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 3bf5302364b37cb1ccef651935833b966ff84464
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 384ce2373081545129c569ea6acc6b01733587fc
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677231"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337291"
