--- a/api/qsharp/microsoft.quantum.diagnostics.equalityfactb.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.equalityfactb.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.diagnostics.equalityfactb
 name: EqualityFactB
 type: function
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 断言传统 Bool 变量具有预期值。
 syntax: 'function EqualityFactB (actual : Bool, expected : Bool, message : String) : Unit'
 input:
@@ -26,9 +26,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: d48a5290401a0318002bd2e908670caf2aaf0a43
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 2732ba4de7fb9b530ef1715e934dc8bb8c1d1ec6
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677201"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337257"
