--- a/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactc.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.diagnostics.nearequalityfactc
 name: NearEqualityFactC
 type: function
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 断言传统复数的预期值为小公差 1e-10。
 syntax: 'function NearEqualityFactC (actual : Microsoft.Quantum.Math.Complex, expected : Microsoft.Quantum.Math.Complex) : Unit'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 27d8c47ec7783c49304bfe00b373ff09fc5e537e
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a6f17d50698640a393caacf4144cc2cbfbdbb344
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682462"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336934"
