--- a/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactd.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactd.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.diagnostics.nearequalityfactd
 name: NearEqualityFactD
 type: function
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 断言传统浮点值的预期值为小公差 1e-10。
-remarks: 这等效于<xref:microsoft.quantum.diagnostics.equalitywithintolerancefact>带有硬编码容差 $10 ^{-10}$ 的。
+remarks: 这等效于 <xref:microsoft.quantum.diagnostics.equalitywithintolerancefact> 带有硬编码容差 $10 ^ {-10} $ 的。
 syntax: 'function NearEqualityFactD (actual : Double, expected : Double) : Unit'
 input:
   content: '(actual : Double, expected : Double)'
@@ -23,9 +23,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 539dfc449493e5a6a2392572d5a7b7184b67f1f6
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: fd26b3640d6205acff8b5a64c97ea4e0ac331520
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682441"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336900"
