--- a/api/qsharp/microsoft.quantum.math.argcomplexpolar.yml
+++ b/api/qsharp/microsoft.quantum.math.argcomplexpolar.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.math.argcomplexpolar
 name: ArgComplexPolar
 type: function
-namespace: Microsoft.Quantum.Math
-summary: 返回类型`ComplexPolar`为的复数的相位。
+namespace: microsoft.quantum.math
+summary: 返回类型为的复数的相位 `ComplexPolar` 。
 syntax: 'function ArgComplexPolar (input : Microsoft.Quantum.Math.ComplexPolar) : Double'
 input:
   content: '(input : Microsoft.Quantum.Math.ComplexPolar)'
@@ -18,9 +18,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 2131a331a81531e6e95d5b146276dd637bee8b3a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 2cd33bc9565c2ea0eab0686aeb3caec6410a01d4
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684250"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344431"
