--- a/api/qsharp/microsoft.quantum.random.normaldistribution.yml
+++ b/api/qsharp/microsoft.quantum.random.normaldistribution.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.random.normaldistribution
 name: NormalDistribution
 type: function
-namespace: Microsoft.Quantum.Random
+namespace: microsoft.quantum.random
 summary: 返回具有给定平均值和方差的正态分布。
 examples: >-
   下面的示例从正态分布（2和标准偏差为0.1）中提取了10个样本：
@@ -33,9 +33,9 @@ output:
 seeAlso:
 - microsoft.quantum.random.standardnormaldistribution
 metadata:
-  ms.openlocfilehash: d5ea2faa4f565821ee281aa54b93e047dd5f7e92
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: 3ebf873028821378daf0081bdc5b77ab7cd2e7cb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863920"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89330678"
