--- a/api/qsharp/microsoft.quantum.research.characterization.randomwalkphaseestimation.yml
+++ b/api/qsharp/microsoft.quantum.research.characterization.randomwalkphaseestimation.yml
@@ -2,22 +2,22 @@
 uid: microsoft.quantum.research.characterization.randomwalkphaseestimation
 name: RandomWalkPhaseEstimation
 type: operation
-namespace: Microsoft.Quantum.Research.Characterization
+namespace: microsoft.quantum.research.characterization
 summary: 执行迭代阶段估算，并使用随机遍历来估算给定 oracle 和 eigenstate 的传统测量结果中的 Bayesian 推理。
 remarks: >-
   ### <a name="iterative-phase-estimation-and-eigenstates"></a>迭代阶段估计和 Eigenstates
 
 
-  通常，输入寄存器`eigenstate`不需要是 $U $ 的 eigenstate $ \ket{\phi} $，但可以是 eigenstates 上的 superposition。 假设输入\_状态由 \begin{align} \ket{\psi} & = \sum {j} \alpha\_j \ket{\phi\_j}，\end{align}，其中 $\{\alpha\_j\}$ 是复数系数，如 $ \sum\_j | \alpha\_j | ^ 2 = $1，其中 $U \ket{\phi\_j} = \phi\_j\ket {\ phi\_j} $。
+  通常，输入寄存器 `eigenstate` 不需要是 $U $ 的 eigenstate $ \ket{\phi} $，但可以是 eigenstates 上的 superposition。 假设输入状态由 \begin{align} \ket{\psi} & = \sum \_ {j} \alpha \_ j \ket{\phi \_ j}，\end{align}，其中 $ \{ \alpha \_ j \} $ 是复数系数，如 $ \sum \_ j | \alpha \_ j | ^ 2 = $1，其中 $U \ket{\phi \_ j} = \phi \_ j\ket {\ phi \_ j} $。
 
 
-  然后，执行迭代阶段估算最终将聚合到单个 eigenstate，如[开发指南](xref:microsoft.quantum.libraries.characterization#iterative-phase-estimation-without-eigenstates)中所述。
+  然后，执行迭代阶段估算最终将聚合到单个 eigenstate，如 [开发指南](xref:microsoft.quantum.libraries.characterization#iterative-phase-estimation-without-eigenstates)中所述。
 
 
   ### <a name="experiment-design"></a>试验设计
 
 
-  根据*粒子推测试探法*、\begin{align} \Theta \sim \Pr （\phi） `oracle` 、\quad t \approx \frac{1}{\variance{\phi}}.，将 $t $ 和反转角度 $ \theta $ 的度量值进行选择。
+  根据粒子推测试探法 $ \theta $ 传递到的度量 $t 时间 $ $ `oracle` ， *particle guess heuristic*\Begin{align} \theta \sim \Pr ( \phi) ，\quad t \approx \frac {1} {\variance{\phi}}。
 
   \end{align} 这种试探的最佳做法是，在以前的假设条件下，使用迭代阶段估算来减少预期的后验方差。
 
@@ -25,17 +25,17 @@ remarks: >-
   ### <a name="optimality"></a>最优性
 
 
-  此操作近似于阶段 $ \phi $ 的最佳估计器，因为使用二次丢失 $L （\phi，\hat{\phi}） \mathrel{： =} （\phi-\hat{\phi}） ^ 2 $ 进行计算。
+  此操作近似于阶段 $ \phi $ 的最佳估计器，因为使用二次丢失 $L ( \phi，\hat{\phi} ) \mathrel{： =} ( \phi-\hat{\phi} ) ^ $2。
 
 
-  有关迭代阶段估算统计信息的详细信息，请参阅[Bayesian 阶段估算](xref:microsoft.quantum.libraries.characterization#bayesian-phase-estimation)。
+  有关迭代阶段估算统计信息的详细信息，请参阅 [Bayesian 阶段估算](xref:microsoft.quantum.libraries.characterization#bayesian-phase-estimation) 。
 syntax: 'operation RandomWalkPhaseEstimation (initialMean : Double, initialStdDev : Double, nMeasurements : Int, maxMeasurements : Int, unwind : Int, oracle : Microsoft.Quantum.Oracles.ContinuousOracle, targetState : Qubit[]) : Double'
 references: >-
   - Ferrie *et al.* 2011 [doi>10.1145： 10/tfx-cli](https://doi.org/10.1007/s11128-012-0407-6)， [arXiv： 1110.3067](https://arxiv.org/abs/1110.3067)。
 
   - Wiebe *et al.* 2013 [doi>10.1145： 10/tf3](https://doi.org/10.1103/PhysRevLett.112.190501)、 [arXiv： 1309.0876](https://arxiv.org/abs/1309.0876)
 
-  - Wiebe 和 Granade 2018 *（准备）*。
+  - Wiebe 和 Granade 2018 * (准备) *。
 input:
   content: '(initialMean : Double, initialStdDev : Double, nMeasurements : Int, maxMeasurements : Int, unwind : Int, oracle : Microsoft.Quantum.Oracles.ContinuousOracle, targetState : Qubit[])'
   types:
@@ -60,7 +60,7 @@ input:
     isPrimitive: true
     uid: Int
   - name: oracle
-    summary: 一个表示单一 $U $ 的操作，此类操作 $U （t） \ket{\phi} = e ^ {\phi}\ket{\phi} $ for eigenstates $ \ket{\phi} $，其中包含未知阶段 $ \phi \in \mathbb{R} ^ + $。
+    summary: 表示单一 $U $ 的操作，$U (t) \ket{\phi} = e ^ {\phi}\ket{\phi} $ for eigenstates $ \ket{\phi} $，其中包含未知阶段 $ \phi \in \mathbb{R} ^ + $。
     uid: microsoft.quantum.oracles.continuousoracle
   - name: targetState
     summary: $U $ 操作的寄存器。
@@ -74,9 +74,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 719c8583cb0fe7f0c9c0f7fa617fa469080a9588
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 27841784ec8961f7a5a78c425411fcf0ae8e8f15
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82706731"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89330576"
